--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -55,12 +55,21 @@ header {
             }
         }
 
-        .dropdown {
+        .manager-dropdown {
             margin: 0 24px 0 0;
 
             @media (max-width: 500px) { 
                 margin: 0 4px 0 0;
             }
+        }
+
+        .user-dropdown {
+            background-color: white;
+            padding: 4px 12px;
+            border-radius: 50%;
+            border: 1px solid black;
+            font-size: 16px;
+            font-weight: 600;
         }
 
         button {
