--- a/public/assets/css/products-managment.css
+++ b/public/assets/css/products-managment.css
@@ -46,12 +46,34 @@ body {
 
         #products-list {
             display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-content: center;
+            align-items: stretch;
+            justify-content: center;
+            gap: 16px;
 
             .product {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+
                 box-shadow: 5px 5px 8px 1px rgba(0, 0, 0, 0.7);
                 border: 1px solid black;
 
                 text-align: center;
+
+                a {
+                    background-size: cover;
+                    background-position: center;
+                    width: 304px;
+                    height: 364px;
+
+                    @media (max-width: 400px) {
+                        width: 244px;
+                        height: 304px;
+                    }
+                }
 
                 h5 {
                     margin-top: 8px;
