--- a/public/assets/css/products.css
+++ b/public/assets/css/products.css
@@ -38,10 +38,26 @@ body {
         }
 
         .product {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            
             box-shadow: 5px 5px 8px 1px rgba(0, 0, 0, 0.7);
             border: 1px solid black;
 
             text-align: center;
+
+            .image-container {
+                background-size: cover;
+                background-position: center;
+                width: 304px;
+                height: 364px;
+
+                @media (max-width: 400px) {
+                    width: 244px;
+                    height: 304px;
+                }
+            }
 
             h5 {
                 margin-top: 8px;
