--- a/public/assets/css/blog-managment.css
+++ b/public/assets/css/blog-managment.css
@@ -9,3 +9,53 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
+
+.s1 {
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../images/blog-managment-background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    padding: 62px 32px;
+
+    @media (max-width: 500px) {
+        padding: 32px 8px;
+    }
+
+    h1 {
+        font-size: 64px;
+        color: #FDC47F;
+        -webkit-text-stroke-color: #FFEEDC;
+        -webkit-text-stroke-width: 2.00px;
+
+        margin: 0 0 32px;
+    }
+
+    button {
+        background-color: #00FF95;
+        border: 1px solid black;
+        font-size: 16px;
+
+        padding: 12px 0;
+
+        width: 156px;
+    }
+}
+
+.s2 {
+    margin: 72px 0 0;
+
+    .blog-managment-header {
+        text-align: center;
+        
+        h2 {
+            font-size: 48px;
+            margin: 0 0 32px;
+        }
+    
+        h6 {
+            font-size: 20px;
+            margin: 0 0 64px;
+        }
+    }
+}
