--- a/public/assets/css/blog.css
+++ b/public/assets/css/blog.css
@@ -9,3 +9,138 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
+
+.posts-container {
+    margin: 0;
+
+    .posts-head {
+        text-align: center;
+    
+        h1 {
+            font-size: 48px;
+            margin: 16px 0 24px;
+        }
+    }
+
+    .division {
+        width: 100%;
+        padding: 32px;
+
+        margin: 0 0 32px;
+    
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 128px;
+    
+        @media (max-width: 800px) {
+            gap: 32px;
+        }
+    
+        .description {
+            a {
+                color: black;
+                text-decoration: none;
+                font-size: 16px;
+            }
+        
+            #main-post-type {
+                margin: 32px 0;
+                font-size: 40px;
+                font-weight: 700;
+            }
+        
+            #main-post-title {
+                margin: 32px 0;
+                font-size: 24px;
+                font-weight: 700;
+            }
+        
+            #main-post-description {
+                margin: 0 0 64px;
+                font-size: 16px;
+            }
+        
+            #main-post-share {
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 28px;
+                justify-content: center;
+                margin-top: 16px;
+
+                img {
+                    width: 28px;
+                    height: 28px;
+                }
+            }
+        }
+        
+        #main-post-image-container {
+            border: 1px solid black;
+            box-shadow: 5px 5px 8px 1px rgba(0, 0, 0, 0.5);
+            border-radius: 24px;
+
+            img {
+                width: 400px;
+                border-radius: 24px;
+    
+                @media (max-width: 500px) {
+                    width: 200px;
+                }
+            }
+        }
+    }
+
+    #posts-content {
+        margin-top: 32px;
+        padding: 16px;
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+
+        a {
+            color: black;
+            text-decoration: none;
+        }
+
+        .post {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            
+            box-shadow: 5px 5px 8px 1px rgba(0, 0, 0, 0.7);
+            border: 1px solid black;
+
+            text-align: center;
+
+            .image-container {
+                background-size: cover;
+                background-position: center;
+                width: 304px;
+                height: 364px;
+
+                @media (max-width: 400px) {
+                    width: 244px;
+                    height: 304px;
+                }
+            }
+
+            h5 {
+                margin-top: 8px;
+                font-size: 18px;
+            }
+    
+            h4 {
+                font-size: 20px;  
+            }
+        }
+    }
+}
