--- a/public/assets/css/post.css
+++ b/public/assets/css/post.css
@@ -9,3 +9,75 @@ body {
     flex-direction: column;
     justify-content: space-between;
 }
+
+#post-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.division {
+    width: 100%;
+    padding: 32px;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 128px;
+
+    @media (max-width: 800px) {
+        gap: 32px;
+    }
+    
+    #carousel-post-images {
+        img {
+            width: 400px;
+
+            @media (max-width: 500px) {
+                width: 200px;
+            }
+        }
+    }
+}
+
+.description {
+    a {
+        color: black;
+        text-decoration: none;
+        font-size: 16px;
+    }
+
+    #post-type {
+        margin: 32px 0;
+        font-size: 40px;
+        font-weight: 700;
+    }
+
+    #post-title {
+        margin: 32px 0;
+        font-size: 24px;
+        font-weight: 700;
+    }
+
+    #post-description {
+        margin: 0 0 64px;
+        font-size: 16px;
+    }
+
+    #post-share {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 28px;
+        justify-content: center;
+        margin-top: 16px;
+
+        img {
+            width: 28px;
+            height: 28px;
+        }
+    }
+}
