--- a/public/assets/css/post.css
+++ b/public/assets/css/post.css
@@ -12,14 +12,12 @@ body {
 
 #post-container {
     padding: 32px;
-
     display: flex;
     justify-content: center;
-    width: 100%;    
-    flex-direction: column;
-    align-items: flex-start;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
     flex-wrap: wrap;
-
     gap: 64px;
 }
 
@@ -79,7 +77,21 @@ body {
     }
 }
 
+#content {
+    width: 60%;
+
+    @media (max-width: 700px) {
+        width: 100%;
+    }
+}
+
 .share {
+    width: 30%;
+
+    @media (max-width: 700px) {
+        width: 100%;
+    }
+
     h3 {
         font-size: 20px;
     }
