--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -73,6 +73,8 @@ header {
             width: 32px;
             height: 32px;
 
+            text-align: center;
+
             cursor: pointer;
 
             background-position: center;
