--- a/public/assets/css/post.css
+++ b/public/assets/css/post.css
@@ -122,7 +122,7 @@ body {
         font-size: 12px;
     }
 
-    .subscribe-button {
+    #subscribe-button {
         width: 100%;
         color: white;
         background-color: black;
@@ -145,4 +145,8 @@ body {
             height: 28px;
         }
     }
+}
+
+#subscription-container {
+    margin-bottom: 8px;
 }
