--- a/public/assets/css/blog-managment.css
+++ b/public/assets/css/blog-managment.css
@@ -19,7 +19,7 @@ body {
     padding: 62px 32px;
 
     @media (max-width: 500px) {
-        padding: 32px 8px;
+        padding: 32px 16px;
     }
 
     h1 {
@@ -43,7 +43,12 @@ body {
 }
 
 .s2 {
+    padding: 32px;
     margin: 72px 0 0;
+
+    @media (max-width: 500px) {
+        padding: 16px;
+    }
 
     .blog-managment-header {
         text-align: center;
@@ -51,11 +56,19 @@ body {
         h2 {
             font-size: 48px;
             margin: 0 0 32px;
+
+            @media (max-width: 500px) {
+                margin: 0 0 16px;
+            }
         }
     
         h6 {
             font-size: 20px;
             margin: 0 0 64px;
+
+            @media (max-width: 500px) {
+                margin: 0 0 32px;
+            }
         }
     }
 
