--- a/public/assets/css/products-managment.css
+++ b/public/assets/css/products-managment.css
@@ -17,6 +17,10 @@ body {
         font-size: 40px;
         font-weight: 700;
         margin: 48px 0 64px;
+
+        @media (max-width: 500px) {
+            margin: 32px 0 48px;
+        }
     }
 
     #products-container {
