--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -164,3 +164,26 @@ footer {
         padding: 12px 24px;
     }
 }
+
+.search-container {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 32px;
+
+    @media (max-width: 500px) {
+        gap: 16px;
+    }
+
+    input {
+        width: 200px;
+    }
+
+    button {
+        background-color: transparent;
+        border: 1px solid black;
+        font-size: 16px;   
+        padding: 8px 16px;
+    }
+}
