--- a/public/assets/css/products-managment.css
+++ b/public/assets/css/products-managment.css
@@ -16,10 +16,10 @@ body {
     #products-managment-title {
         font-size: 40px;
         font-weight: 700;
-        margin: 48px 0 64px;
+        margin: 48px 0 32px;
 
         @media (max-width: 500px) {
-            margin: 32px 0 48px;
+            margin: 32px 0;
         }
     }
 
@@ -56,6 +56,8 @@ body {
             align-items: stretch;
             justify-content: center;
             gap: 16px;
+
+            margin: 32px 0 0;
 
             .product {
                 display: flex;
