--- a/public/assets/css/products.css
+++ b/public/assets/css/products.css
@@ -19,6 +19,8 @@ body {
 
     .products-head {
         text-align: center;
+
+        margin: 0 0 32px;
     
         h1 {
             font-size: 48px;
@@ -27,7 +29,7 @@ body {
     }
 
     #products-content {
-        margin-top: 32px;
+        margin-top: 24px;
         padding: 16px;
 
         display: flex;
