--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -93,6 +93,8 @@ a {
 
         img {
             width: 100%;
+            max-height: 312px;
+            object-fit: cover;
         }
     }
 }
