Filtrar apenas inscritos na newsletters

--- a/public/assets/css/users-managment.css
+++ b/public/assets/css/users-managment.css
@@ -79,3 +79,16 @@ h6 {
         }
     }
 }
+
+.onlyNewsletters-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 8px;
+
+    input {
+        margin-top: 5px;
+    }
+}
